fixing CSRF issue and reformatting the code