@@ -8,7 +8,6 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
@@ -17,68 +16,78 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
 
-        private final SessionService sessionService;
-        private final RequestTraceFilter requestTraceFilter;
+    private final SessionService sessionService;
+    private final RequestTraceFilter requestTraceFilter;
 
-        @Bean
-        public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-                http
-                                .csrf(AbstractHttpConfigurer::disable)
-                                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                                .sessionManagement(session -> session
-                                                .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                                .authorizeHttpRequests(auth -> auth
-                                                // Public endpoints - no authentication required
-                                                .requestMatchers(
-                                                                "/api/auth/token",
-                                                                "/api/auth/refresh",
-                                                                "/api/session/validate-session",
-                                                                "/actuator/**",
-                                                                "/v3/api-docs/**",
-                                                                "/swagger-ui/**",
-                                                                "/swagger-ui.html",
-                                                                "/ws-relay/**")
-                                                .permitAll()
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        http
+                .csrf(csrf -> csrf
+                        .ignoringRequestMatchers(
+                                "/api/auth/token",
+                                "/api/auth/refresh",
+                                "/api/session/validate-session",
+                                "/actuator/**",
+                                "/v3/api-docs/**",
+                                "/swagger-ui/**",
+                                "/swagger-ui.html",
+                                "/ws-relay/**"))
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .sessionManagement(session -> session
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authorizeHttpRequests(auth -> auth
+                        // Public endpoints - no authentication required
+                        .requestMatchers(
+                                "/api/auth/token",
+                                "/api/auth/refresh",
+                                "/api/session/validate-session",
+                                "/actuator/**",
+                                "/v3/api-docs/**",
+                                "/swagger-ui/**",
+                                "/swagger-ui.html",
+                                "/ws-relay/**")
+                        .permitAll()
 
-                                                // All other endpoints require authentication
-                                                .anyRequest().authenticated())
-                                .addFilterBefore(
-                                                requestTraceFilter,
-                                                UsernamePasswordAuthenticationFilter.class)
-                                .addFilterBefore(
-                                                sessionAuthenticationFilter(),
-                                                UsernamePasswordAuthenticationFilter.class);
+                        // All other endpoints require authentication
+                        .anyRequest().authenticated())
+                .addFilterBefore(
+                        requestTraceFilter,
+                        UsernamePasswordAuthenticationFilter.class)
+                .addFilterBefore(
+                        sessionAuthenticationFilter(),
+                        UsernamePasswordAuthenticationFilter.class);
 
-                return http.build();
-        }
+        return http.build();
+    }
 
-        @Bean
-        public SessionAuthenticationFilter sessionAuthenticationFilter() {
-                return new SessionAuthenticationFilter(sessionService);
-        }
+    @Bean
+    public SessionAuthenticationFilter sessionAuthenticationFilter() {
+        return new SessionAuthenticationFilter(sessionService);
+    }
 
-        @Bean
-        public CorsConfigurationSource corsConfigurationSource() {
-                CorsConfiguration configuration = new CorsConfiguration();
-                configuration.setAllowedOrigins(Arrays.asList(
-                                "http://localhost:3000",
-                                "http://localhost:8080",
-                                // Add your Flutter web/mobile origins here
-                                "*"));
-                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-                configuration.setAllowedHeaders(Arrays.asList("*"));
-                configuration.setExposedHeaders(Arrays.asList("Authorization", "X-Session-Token"));
-                configuration.setAllowCredentials(false); // Set to true if using credentials
-                configuration.setMaxAge(3600L);
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(Arrays.asList(
+                "http://localhost:3000",
+                "http://localhost:8080",
+                // Add your Flutter web/mobile origins here
+                "*"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "X-Session-Token"));
+        configuration.setAllowCredentials(false); // Set to true if using credentials
+        configuration.setMaxAge(3600L);
 
-                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-                source.registerCorsConfiguration("/**", configuration);
-                return source;
-        }
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
+        return source;
+    }
 }
